# QhX1

./: .gitattributes  .gitignore  .pre-commit-config.yaml  0  0-result.csv  0458387  0458387-result.csv  1  1-result.csv  1384177  1384177-result.csv  2  2-result.csv  3  HOWTOUPLOADPIP.txt  LICENSE.txt  Makefile  Merger.ipynb  README.md  Single_Injection_demo.ipynb  TEST  codemeta.json  gitignore  holoviews_decimate.ipynb  pyproject.toml  requirements.txt  results.csv  results2.csv  results3.csv  setup.py  token.txt  updatesofdocumentation.txt
.github/workflows/: CI-pylint.yml  draft-pdf.yml  python-tests.yml
.ipynb_checkpoints/: Single_Injection_demo-checkpoint.ipynb
QhX/: TEST  __init__.py  batch_processor.py  calculation.py  data_manager.py  detection.py  dynamical_mode.py  iparallelization_solver.py  light_curve.py  merge_batch_csv.py  merge_csv_results.py  output.py  output_parallel.py  parallel_classification.py  parallelization.py  parallelization_solver.py  processing_utils.py  synthetic_test_data.parquet
QhX.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
QhX/QhX_dynamical.egg-info/: PKG-INFO
QhX/algorithms/superlets/: superlet.py
QhX/algorithms/wavelets/: __init__.py  wwtz.py
QhX/plots/: __init__.py
QhX/tests/: test_integrated.py  test_logger.py  test_parallel_solver.py
QhX/utils/: logger.py
QhX_new_dynamical.egg-info/: PKG-INFO  SOURCES.txt
data/: 0458387-result.csv  1384177-result.csv  data_links.txt  mock_results_file.csv  results.csv  results2.csv
docs/: LargeData.html  batch_processor.html  calculation.html  correlation.html  data_manager.html  detection.html  dynamical_mode.html  examples.html  faq.html  genindex.html  important_note.html  index.html  installation.html  interactive_plot_large_files.html  interactive_plt.html  introduction.html  iparallelization_solver.html  license.html  light_curve.html  merge_batch_csv.html  mock_lc.html  objects.inv  output.html  output_parallel.html  package.html  parallel_classification.html  parallelization_solver.html  processing_utils.html  py-modindex.html  quick_start.html  reg.html  search.html  searchindex.js  superlet.html  superlets.html  support_and_contact.html  test_integrated.html  test_logger.html  test_parallel_solver.html  wwtz.html
docs/_modules/: index.html  iparallelization_solver.html  parallel_classification.html
docs/_modules/QhX/: batch_processor.html  calculation.html  data_manager.html  detection.html  dynamical_mode.html  interactive_plot_large_files.html  light_curve.html  merge_batch_csv.html  output.html  output_parallel.html  parallelization_solver.html  processing_utils.html
docs/_sources/: LargeData.rst.txt  correlation.rst.txt  detection.rst.txt  examples.rst.txt  index.rst.txt  introduction.rst.txt  license.rst.txt  light_curve.rst.txt  output_parallel.rst.txt  package.rst.txt  parallelization_solver.rst.txt  quick_start.rst.txt  superlet.rst.txt  superlets.rst.txt
docs/examples/: Example1.html  Example3.html  Example3.ipynb  Example4.html
paper/: paper.bib  paper.md
paper/jats/: paper.jats
prof/: combined.prof  test_light_curve_processing.prof  test_logger_both_flags.prof  test_parallel_solver_process_and_merge.prof
source/: Makefile  calculation.rst  conf.py  detection.rst  dynamical_mode.rst  examples.rst  faq.rst  important_note.rst  index.rst  installation.rst  introduction.rst  package.rst  parallel_classification.rst  parallelization_solver.rst  processing_utils.rst  quick_start.rst  reg.rst  test_integrated.rst  test_logger.rst  test_parallel_solver.rst  untitled 3.txt
source/_build/doctrees/: LargeData.doctree  batch_processor.doctree  calculation.doctree  correlation.doctree  (+33 more)
source/examples/: aggregated.csv  processing_utils.py  processing_utils_old.py
(+109 files in other folders)
