[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QhX_new_dynamical"  # Update this if necessary
version = "0.1.1"           # Increment the version for new releases
description = "QhX_new_dynamical: New package with dynamic mode for light curve analysis"
readme = "README.md"
requires-python = ">=3.0"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Andjelka Kovacevic", email = "andjelka.kovacevic@matf.bg.ac.rs" }
]
keywords = ["astronomy", "data analysis", "light curves", "dynamic mode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "scikit-optimize",
    "libwwz",
    "colorednoise",
    "tqdm",
    "panel",
    "hvplot",
    "bokeh",
    "datashader",
    "pyarrow",
    "dask[dataframe]",
    "traitlets"
]

[project.urls]
Documentation = "https://lionandjelka.github.io/QhX_new_dynamical"

[tool.setuptools]
packages = ["QhX"]  # Keep internal module names as QhX to maintain backward compatibility

[tool.setuptools.package-data]
QhX = ["data/*.csv"]  # Ensure necessary data files are included

[tool.setuptools.exclude-package-data]
QhX = ["source/*"]  # Exclude any unnecessary source files

[project.optional-dependencies]
tests = ["pytest"]  # Add optional dependencies for testing
